添加mysql引用